--- a/frontend/package.json
+++ b/frontend/package.json
@@ -10,6 +10,7 @@
     "antd": "^4.12.2",
     "craco": "0.0.3",
     "craco-less": "^1.17.1",
+    "firebase": "^8.2.7",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
     "react-router-dom": "^5.2.0",
