--- a/frontend/package.json
+++ b/frontend/package.json
@@ -13,8 +13,11 @@
     "firebase": "^8.2.7",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
+    "react-redux": "^7.2.2",
     "react-router-dom": "^5.2.0",
     "react-scripts": "^4.0.2",
+    "redux": "^4.0.5",
+    "redux-devtools-extension": "^2.13.8",
     "styled-components": "^5.2.1",
     "web-vitals": "^1.1.0"
   },
