--- a/frontend/package.json
+++ b/frontend/package.json
@@ -4,22 +4,23 @@
   "private": true,
   "dependencies": {
     "@ant-design/icons": "^4.4.0",
+    "@craco/craco": "^6.0.0",
     "@testing-library/jest-dom": "^5.11.9",
     "@testing-library/react": "^11.2.5",
     "@testing-library/user-event": "^12.6.3",
     "antd": "^4.12.2",
-    "craco": "0.0.3",
     "craco-less": "^1.17.1",
     "firebase": "^8.2.7",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
     "react-redux": "^7.2.2",
     "react-router-dom": "^5.2.0",
-    "react-scripts": "^4.0.2",
+    "react-scripts": "^4.0.1",
     "redux": "^4.0.5",
     "redux-devtools-extension": "^2.13.8",
     "styled-components": "^5.2.1",
-    "web-vitals": "^1.1.0"
+    "web-vitals": "^1.1.0",
+    "webpack": "^4.44.2"
   },
   "scripts": {
     "start": "craco start",
