--- a/api/package.json
+++ b/api/package.json
@@ -3,6 +3,9 @@
   "version": "1.0.0",
   "description": "eStore app API",
   "main": "app.js",
+  "engines": {
+    "node": "14.15.4"
+  },
   "type": "module",
   "scripts": {
     "start": "node app",
