--- a/api/package.json
+++ b/api/package.json
@@ -8,8 +8,8 @@
   },
   "type": "module",
   "scripts": {
-    "start": "node app",
-    "server": "nodemon app"
+    "start": "node --experimental-specifier-resolution=node app",
+    "server": "nodemon --experimental-specifier-resolution=node app"
   },
   "keywords": [],
   "author": "Kariim Muhamad",
