--- a/frontend/package.json
+++ b/frontend/package.json
@@ -9,6 +9,7 @@
     "@testing-library/react": "^11.2.5",
     "@testing-library/user-event": "^12.6.3",
     "antd": "^4.12.2",
+    "axios": "^0.21.1",
     "craco-less": "^1.17.1",
     "firebase": "^8.2.7",
     "react": "^17.0.1",
