add express validator to category

--- a/api/package.json
+++ b/api/package.json
@@ -23,6 +23,7 @@
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
     "express-jwt": "^6.0.0",
+    "express-validator": "^6.10.0",
     "firebase-admin": "^9.5.0",
     "jsonwebtoken": "^8.5.1",
     "mongoose": "^5.11.17",
