--- a/frontend/package.json
+++ b/frontend/package.json
@@ -23,6 +23,7 @@
     "redux-devtools-extension": "^2.13.8",
     "redux-thunk": "^2.3.0",
     "styled-components": "^5.2.1",
+    "typewriter-effect": "^2.17.0",
     "web-vitals": "^1.1.0",
     "webpack": "^4.44.2"
   },
