--- a/api/package.json
+++ b/api/package.json
@@ -30,6 +30,7 @@
     "mongoose": "^5.11.17",
     "morgan": "^1.10.0",
     "nodemon": "^2.0.7",
-    "slugify": "^1.4.7"
+    "slugify": "^1.4.7",
+    "stripe": "^8.142.0"
   }
 }
