--- a/frontend/package.json
+++ b/frontend/package.json
@@ -5,6 +5,8 @@
   "dependencies": {
     "@ant-design/icons": "^4.4.0",
     "@craco/craco": "^6.0.0",
+    "@stripe/react-stripe-js": "^1.4.0",
+    "@stripe/stripe-js": "^1.13.2",
     "@testing-library/jest-dom": "^5.11.9",
     "@testing-library/react": "^11.2.5",
     "@testing-library/user-event": "^12.6.3",
