--- a/api/package.json
+++ b/api/package.json
@@ -31,6 +31,7 @@
     "morgan": "^1.10.0",
     "nodemon": "^2.0.7",
     "slugify": "^1.4.7",
-    "stripe": "^8.142.0"
+    "stripe": "^8.142.0",
+    "uniqid": "^5.3.0"
   }
 }
