--- a/package.json
+++ b/package.json
@@ -34,5 +34,8 @@
     "slugify": "^1.4.7",
     "stripe": "^8.142.0",
     "uniqid": "^5.3.0"
+  },
+  "devDependencies": {
+    "heroku": "^7.52.0"
   }
 }
