--- a/api/package.json
+++ b/api/package.json
@@ -8,9 +8,9 @@
   },
   "type": "module",
   "scripts": {
-    "start": "node --experimental-specifier-resolution=node api/app",
-    "server": "nodemon --experimental-specifier-resolution=node api/app",
-    "frontend": "npm start --prefix frontend",
+    "start": "node --experimental-specifier-resolution=node app",
+    "server": "nodemon --experimental-specifier-resolution=node app",
+    "frontend": "npm start --prefix ../frontend",
     "dev": "concurrently \"npm run server\" \"npm run frontend\"",
     "heroku-postbuild": "NPM_CONFIG_PRODUCTION=false npm install --prefix frontend && npm run build --prefix frontend"
   },
