--- a/api/package.json
+++ b/api/package.json
@@ -12,7 +12,7 @@
     "server": "nodemon --experimental-specifier-resolution=node app",
     "frontend": "npm start --prefix ../frontend",
     "dev": "concurrently \"npm run server\" \"npm run frontend\"",
-    "heroku-postbuild": "NPM_CONFIG_PRODUCTION=false npm install"
+    "heroku-postbuild": "NPM_CONFIG_PRODUCTION=false npm install --prefix ../frontend && npm run build --prefix ../frontend"
   },
   "keywords": [],
   "author": "Kariim Muhamad",
