--- a/package.json
+++ b/package.json
@@ -5,8 +5,8 @@
   "main": "app.js",
   "type": "module",
   "scripts": {
-    "start": "node --experimental-specifier-resolution=node app",
-    "server": "nodemon --experimental-specifier-resolution=node app",
+    "start": "node --experimental-specifier-resolution=node api/app",
+    "server": "nodemon --experimental-specifier-resolution=node api/app",
     "frontend": "npm start --prefix frontend",
     "dev": "concurrently \"npm run server\" \"npm run frontend\"",
     "heroku-postbuild": "NPM_CONFIG_PRODUCTION=false npm install --prefix frontend && npm run build --prefix frontend"
