--- a/package.json
+++ b/package.json
@@ -8,7 +8,8 @@
     "start": "node --experimental-specifier-resolution=node app",
     "server": "nodemon --experimental-specifier-resolution=node app",
     "frontend": "npm start --prefix ../frontend",
-    "dev": "concurrently \"npm run server\" \"npm run frontend\""
+    "dev": "concurrently \"npm run server\" \"npm run frontend\"",
+    "heroku-postbuild": "NPM_CONFIG_PRODUCTION=false npm run server"
   },
   "keywords": [],
   "author": "Kariim Muhamad",
